--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-  <div id="arc-slider"></div>
-  <div id="arc-slider2"></div>
-  <script src="js/script.js"></script>
+  <div id="slider"></div>
+  <script src="https://cdn.zipview.kr/webvr/service/DEMO/lib/product360.js"></script>
   <script>
-    const arcSlider = new ArcSlider('#arc-slider', {
-      src: 'img/slide.jpg',
-      auto: true,
+    const pdSlider = new Product360('#slider', {
+      src: 'https://cdn.zipview.kr/webvr/service/DEMO/estate/ISO/iso001.jpg',
       sensitivity: 2,
     });
   </script>
