--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 
 <body>
   <div id="slider"></div>
-  <script src="https://cdn.zipview.kr/public/javascript/product360.js"></script>
+  <!-- <script src="https://cdn.zipview.kr/public/javascript/product360.js"></script> -->
+  <script src="js/product360.js"></script>
   <script>
     const pdSlider = new Product360('#slider', {
-      src: 'https://cdn.zipview.kr/webvr/service/DEMO/estate/ISO/iso001_min.jpg',
+      src: 'https://cdn.zipview.kr/webvr/service/DEMO/estate/ISO/iso001.jpg',
       sensitivity: 2,
+      init() {
+        console.log('init');
+      },
+      loaded() {
+        console.log('loaded');
+      }
     });
   </script>
 </body>
