Add: Modify demo style

--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,8 @@
     }
 
     .pd-intro img {
-      width: 50px;
+      width: 72px !important;
+      margin-bottom: 0 !important;
     }
 
     .pd-intro p {
